gl33-master/src/test/deca/context/invalid/other/appelFauxFonction13.deca
// Test de contexte invalide : appel faux de la fonction (int au lieu de string)

class MyClass{

    String puissance(String a){
        return a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance(1);
}
